# S32

./: .gitignore  CMakeLists.txt  bash.sh  build_aarch64.sh
base_library/comm/hht_dds/: CMakeLists.txt
base_library/comm/hht_dds/app/: CMakeLists.txt  app_pub.cpp  app_reply.cpp  app_request.cpp  app_sub.cpp
base_library/comm/hht_dds/include/: DDS_comm.h  DDS_waitset.h
base_library/comm/hht_iox/: CMakeLists.txt  iox_interface.h  iox_shm_impl.h  iox_shm_interface.h  iox_soa_interface.h  publisher_c_wrapper.cpp  publisher_c_wrapper.h  test_publisher_c.c  test_wait_c.cpp  topic_data.hpp  wait_c_kit.cpp  wait_c_kit.h
base_library/comm/hht_iox/cpp/: comm_config.h  enum_event.h  event_struct_idl.h
base_library/log/: CMakeLists.txt  hht_log.h  hht_log_impl.cpp  logging.h  node_log.cpp  node_log.h  node_log_interface.h  vlog_is_on.h
base_library/log/examples/: node_log_test.cpp
base_library/log/ntpdate/: CMakeLists.txt  README.TXT  ntp_main.cpp
base_library/log/upload/: CMakeLists.txt
base_library/log/upload/certificate/: HHTCA_Prod.pem  IOVCA_Prod.cer  ROOTCA_Prod.cer  SUBCA_Prod.cer
base_library/log/upload/docs/: README.txt  UploadRuleExample.json  config.json  filter.json
base_library/log/upload/include/: Control.h  LogHttpClient.h  LogUploadFile.h  ObsUploader.h  TspDownloader.h  TspProxy.h  TspUploader.h  UploadPretend.h  base64.h  hh_ota_interface.h  upload.h
base_library/mqtt/: CMakeLists.txt  README.md  mqtt_client.cpp  mqtt_client.h
base_library/rdb/: CMakeLists.txt  README.md  example.cpp  sqlite_operator.cpp  sqlite_operator.h
service/account_service/: CMakeLists.txt  account_service.cpp  config.json  macros.h  utils.cpp  utils.h
service/app_manager/: CMakeLists.txt  app_config_factory.json  app_config_normal.json  app_config_ota.json  app_manager.cpp  app_manager.h  app_manager_config.cpp  app_manager_config.h  app_manager_entry.cpp  app_start_mode.h  app_status.h  hdbm_app.h  hdbm_register.h  test.json
service/app_manager/appmanager_signal/: CMakeLists.txt  app_example.cpp  app_example.h  application_scaffold.h  hdbm_app_if.h  hdbm_app_reg.h  main.cpp  send_signal.cpp
service/app_manager/linux/: process.cpp  process.h
service/app_manager/platform_health/: health_watchdog.h  readme.txt  watchdog.h
service/edge_calc_center/: CMakeLists.txt  PathTool.h  ccc_entry.cpp  ccc_instance.h  ccc_status.h  readme.txt
service/edge_calc_center/buffer_manager/: UntypedRingBuffer.h  buf_pool.cpp  buf_pool.h
service/edge_calc_center/config/: ConfigCtrl.cpp  ConfigCtrl.h  DmConfig.json  HH_AN1_HDBM_VBackbone_CAN_Matrix.json  env_config.h
service/edge_calc_center/data_filter/: can_matrix.cpp  can_matrix.h  readme.txt  signal_filter.cpp  signal_filter.h
service/edge_calc_center/event_judge/: Evaluator.h  Extractor.h  LogicNode.h  LogicToken.h  LogicVariant.h  Trigger.cpp  Trigger.h  TriggerCfgGen.py  TriggerCfgGen.yaml  TriggerManager.cpp  TriggerManager.h  TriggerManagerGen.cpp  TriggerManagerGen.py
service/edge_calc_center/signal_inject/: signal_inject.cpp  signal_inject.h
service/edge_calc_center/test/: CMakeLists.txt  datauploader_test.cpp
service/edge_calc_center/utils/: CMakeLists.txt
service/hdbi/: CMakeLists.txt
service/hdbi/include/: DomainNode.h  ini_config.h  ipcf_data.h  s2s_config.h  status.h
service/hdbi/src/: DomainNode.cpp  main.cpp
service/log/log_collector_service/: CMakeLists.txt
service/norequest_manager/: CMakeLists.txt  noReqList.json
service/norequest_manager/include/: CommStruct.h  GenerateNoReq.h  NoReqManager.h  SignalTimer.h
service/norequest_manager/src/: GenerateNoReq.cpp  NoReqManager.cpp  SignalTimer.cpp
service/scene_engine/: A_LeaveNow.json  A_SPA.json  A_meta2topic.json  CMakeLists.txt  custom_scene.cpp  custom_scene.h  custom_scene_manager.cpp  custom_scene_manager.h  exampleTest9.json  meta_ability.cpp  meta_ability.h  sceneCard.cpp  sceneCard.h  sceneCloud.cpp  sceneCloud.h  scene_engine_entry.cpp
service/scene_engine/event_occur/: sim_trigger_event.h
service/scene_engine/http_comm/: A_ExeResult.json  A_SceneDetail.json  A_login.json  Encode.h  GetSceneDetail.cpp  GetSceneDetail.h  LoginCloud.cpp  LoginCloud.h  Signature.h  UploadExeResult.cpp  UploadExeResult.h
service/scene_engine/mqtt_comm/: mqtt.cpp  mqtt.h
service/scene_engine/scheduler/: scheduler.h
service/scene_engine/socket_comm/: CMakeLists.txt  DDSClient_entry.cpp  s2s.json  socketComm.cpp  socketComm.h
service/system_manager/: CMakeLists.txt  system_manager.cpp  ut_run.sh
service/vehicle_control/: CMakeLists.txt  VehicleControl_Client.cpp  dds_Config.json  topicExample.json
service/vehicle_control/DataDistribution/: CMakeLists.txt  McuControl.hpp  McuImplementation.h  McuInterface.h
service/vehicle_control/FaultInject/: faultManage.cpp  faultManage.h  faultSimu.cpp  faultSimu.h
service/vehicle_control/TopicManage/: CMakeLists.txt  Sim_TriggerEvent.h  TopicManage.cpp  TopicManage.h  TopicService.cpp  TopicService.h  topicExample.json
service/vehicle_control/service_Comm/: serviceComm.cpp  serviceComm.h
third_part/ddscase/customTopicNameTest_arm/: CMakeLists.txt  READ_ME.txt  USER_QOS_PROFILES.xml  build.sh
third_part/minizip-zlib-source/minizip-ng-1.2/: CMakeLists.txt  build_aarch64.sh  crypt.c  crypt.h
ut_test/base_library/comm/: CMakeLists.txt  test_pub_wait.cpp
ut_test/base_library/log/: CMakeLists.txt  log_client.cpp
ut_test/base_library/rdb/: CMakeLists.txt  test_rdb.cpp
ut_test/service/account_service/: CMakeLists.txt  test_account_service.cpp
ut_test/service/app_manager/: CMakeLists.txt  app_config_normal.json  readme.txt  test_app.cpp  test_app_manager.cpp  test_hdbm_app.cpp  test_zombie.cpp
utils/OSPosix/: CMakeLists.txt
utils/OSPosix/inc/: HhtAtomicFile.h  HhtBasicDef.h  HhtBufPool.h  HhtGuard.h  HhtLooperThread.h  HhtMutex.h  HhtPriorityQueue.h  HhtStrTool.h  HhtTaskLooper.h  HhtThread.h  HhtTimeTick.h  HhtVariant.h
utils/OSPosix/src/: HhtAtomicFile.cpp  HhtBufPool.cpp  HhtLooperThread.cpp  HhtMutex.cpp  HhtTaskLooper.cpp  HhtThread.cpp  HhtTimeTick.cpp  HhtVariant.cpp
(+872 files in other folders)
