# cmake_minimum_required(VERSION 3.4)

# project( vc_control )

# add_compile_options(-Wall -std=c++17 -g)
# set (CMAKE_CXX_FLAGS " -g -Wall")

# #########################################################

# add_executable(VDataDistribution
#                McuControl.hpp
#               # VehicleControlClient.cpp
# )

# target_include_directories(VDataDistribution PUBLIC
#     ${PROJECT_SOURCE_DIR}/service/vehicle_control/data_distribution
# )





